wp mit bs starter

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -9,3 +9,9 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+@import "primary/footer";
+
