--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -1,3 +1,15 @@
+.site-content {
+  @include make-row();
+
+  .content-area {
+    @include make-md-column(9);
+  }
+
+  .widget-area {
+    @include make-md-column(3);
+  }
+}
+
 .sticky {
 	display: block;
 }
@@ -25,4 +37,33 @@
 .page-links {
 	clear: both;
 	margin: 0 0 1.5em;
+}
+
+/*  Post Meta */
+.entry-meta,
+.entry-footer {
+  font-size: 12px;
+
+  .fa {
+    color: $color__light-grey;
+    margin-right: 2px;
+  }
+
+  span {
+    margin-right: 15px;
+    display: inline-block;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  a {
+    color: $color__light-grey;
+
+    &:hover {
+      text-decoration: none;
+      color: $gray-dark;
+    }
+  }
 }
